<resources>
    <string name="app_name">RetrofitPhpApp</string>
    <string name="logo_description">Grass</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_invalid_email">This email address is invalid. Eg. example@xyz.com</string>
    <string name="error_invalid_password">Password should have atleast 6 characters.</string>
    <string name="error_invalid_full_name">Name should have atleast 4 characters.</string>
    <string name="full_name">Full name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="log_out">Log out</string>

    <!--Animate the Hamburger-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Update">Update</string>

</resources>