<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment"
    >
    <ImageView
        android:id="@+id/image_view_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:minHeight="160dp"
        android:minWidth="160dp"
        android:src="@drawable/ic_baseline_grass_24"
        android:contentDescription="@string/logo_description"
        />
    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/image_view_app_logo"
        android:textSize="@dimen/primary_text_size"
        android:layout_margin="@dimen/max_margin"
        android:padding="@dimen/max_padding"
        android:textColor="@color/white"
        android:textAlignment="center"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_alignParentBottom="true"
       android:layout_margin="@dimen/button_margin"
       android:padding="@dimen/button_padding"
       >
       <Button
           android:id="@+id/button_sign_in"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:minWidth="@dimen/button_min_width"
           android:padding="@dimen/button_padding"
           android:layout_margin="@dimen/button_margin"
           android:text="@string/sign_in"
           style="?android:attr/buttonBarStyle"
           />
       <Button
           android:id="@+id/button_sign_up"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:minWidth="@dimen/button_min_width"
           android:padding="@dimen/button_padding"
           android:layout_margin="@dimen/button_margin"
           android:text="@string/sign_up"
           style="?android:attr/buttonBarStyle"

           />
   </LinearLayout>
</RelativeLayout>