<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment"
    android:gravity="center"
    >
  <EditText
      android:id="@+id/edit_text_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      android:textSize="@dimen/primary_text_size"
      android:inputType="textEmailAddress"

      />
  <EditText
      android:id="@+id/edit_text_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      android:textSize="@dimen/primary_text_size"
      android:inputType="textPassword"
      android:layout_below="@id/edit_text_email"
      />
  <Button
      android:id="@+id/button_sign_in"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/button_padding"
      android:layout_margin="@dimen/button_margin"
      android:minWidth="@dimen/button_min_width"
      android:text="@string/sign_in"
      style="?android:attr/buttonBarStyle"
      android:layout_below="@id/edit_text_password"
      />

  </RelativeLayout>