<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment"
    android:gravity="center"
    >
  <EditText
      android:id="@+id/edit_text_full_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/full_name"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      android:textSize="@dimen/primary_text_size"
      android:inputType="text"
      />
  <EditText
      android:id="@+id/edit_text_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      android:textSize="@dimen/primary_text_size"
      android:inputType="textEmailAddress"
      android:layout_below="@id/edit_text_full_name"

      />
  <EditText
      android:id="@+id/edit_text_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      android:textSize="@dimen/primary_text_size"
      android:inputType="textPassword"
      android:layout_below="@id/edit_text_email"
      />
  <RadioGroup
      android:id="@+id/radio_group_gender"
      android:layout_below="@id/edit_text_password"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
  <com.google.android.material.radiobutton.MaterialRadioButton
      android:id="@+id/radio_button_male"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Male"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      />
  <com.google.android.material.radiobutton.MaterialRadioButton
      android:id="@+id/radio_button_female"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Female"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
        />
  </RadioGroup>
  <Button
      android:id="@+id/button_sign_up"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/button_padding"
      android:layout_margin="@dimen/button_margin"
      android:minWidth="@dimen/button_min_width"
      android:text="@string/sign_up"
      style="?android:attr/buttonBarStyle"
      android:layout_below="@id/radio_group_gender"
      />
  <LinearLayout
      android:layout_below="@id/button_sign_up"
      android:id="@+id/linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:visibility="gone"
      android:padding="@dimen/max_padding"
      android:layout_margin="@dimen/max_margin"
      >
  <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />
    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Loading..."
        android:layout_gravity="center"
        android:padding="@dimen/max_padding"
        android:layout_marginStart="@dimen/max_margin"
        android:textSize="@dimen/primary_text_size"
        android:inputType="text"
        />
  </LinearLayout>


</RelativeLayout>